# tapify

./: LICENSE  README.md  dependencies.txt  pyproject.toml  readthedocs.yml  setup.py  tapify.py
.github/workflows/: ci.yml
KIC4448777/: asymptotic_fit_chains_KIC4448777.csv  asymptotic_fit_modeID_KIC4448777.csv  asymptotic_fit_summary_KIC4448777.csv  peakbag_summary_KIC4448777.csv
data/: koi2133.lp.ts
docs/source/: conf.py  index.rst
multitaper/: nftest.py
multitaper/.ipynb_checkpoints/: LSmultitaper-checkpoint.py  mtls-checkpoint.py
notebooks/: Ftest.ipynb  MultiTaperUsage.ipynb
peakpagging/s4tess_sec_1_1/: asymptotic_fit_summary_s4tess_sec_1_1.csv
s4tess_sec_1_1/: asymptotic_fit_chains_s4tess_sec_1_1.csv  asymptotic_fit_modeID_s4tess_sec_1_1.csv  peakbag_summary_s4tess_sec_1_1.csv
tapify/: __init__.py  ftest.py  optimize.py  simulate.py  tapify.py  transform.py  utils.py
tests/: test_multitaper.py
