[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapify"
version = "0.1.0"
description = "tapify: A Python package to compute multitaper spectral estimates for unevenly sampled data."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name="Aarya Patil", email="patil@mpia.de" }
]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "nfft",
    "statsmodels"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
"Homepage" = "https://github.com/aaryapatil/tapify"
"Bug Tracker" = "https://github.com/aaryapatil/tapify/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
